--- a/app/sass/_fonts.sass
+++ b/app/sass/_fonts.sass
@@ -1,6 +1,8 @@
 @import "_mixins/font-face"
 
 +font-face("Gilroy", "../fonts/Gilroy/Gilroy-Regular", 400)
++font-face("Gilroy", "../fonts/Gilroy/Gilroy-Medium", 500)
 +font-face("Gilroy", "../fonts/Gilroy/Gilroy-Bold", 700)
 +font-face("Gilroy", "../fonts/Gilroy/Gilroy-ExtraBold", 800)
 +font-face("Gilroy", "../fonts/Gilroy/Gilroy-Black", 900)
++font-face("Muller", "../fonts/Muller/MullerRegular", 400)
