--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -97,12 +97,53 @@ input, textarea, select
   outline: none
   box-shadow: none
   appearance: none
-  padding: 0
   box-sizing: border-box
   font-family: $default-font
-
+  height: 61px
+  width: 100%
+  border-radius: 8px
+  border: solid 1px #ced6da
+  background-color: #ffffff
+  padding: 0 20px
+  color: #ced6da
+  font-size: 14px
+  &::placeholder
+    color: #ced6da
   &:hover, &:focus
     outline: none
+
+textarea
+  height: 96px
+  padding: 24px 20px
+
+label
+  display: block
+  margin: 0 0 9px
+
+.recapcha
+  width: 100%
+  display: flex
+  align-items: center
+  justify-content: center
+  margin: 14px auto
+
+button
+  outline: none
+  border: none
+  cursor: pointer
+  transition: .3s ease
+
+.consent
+  text-align: center
+  margin: 16px auto 0
+  font-size: 12px
+  color: #969696
+  max-width: 250px
+  width: 100%
+  a
+    display: inline
+
+
 
 h1
   font-size: 40px
@@ -155,7 +196,8 @@ h2
   color: #fff
   box-shadow: 0 3px 0 0 #de6e00
   &:hover
-    box-shadow: 0 -3px 0 0 #de6e00
+    box-shadow: 0 -3px 0 0 $accent
+    background: #de6e00
 
 .btn-entrance
   height: 28px
@@ -217,6 +259,8 @@ footer
   font-size: 14px
   line-height: 1.57
 
+.w-100
+  width: 100%
 
 //header
 header
@@ -649,6 +693,155 @@ main
     text-align: center
     margin: 0 auto 50px
 
+.panel_heading
+  border-bottom: 1px solid #d2dade
+  width: 100%
+  padding: 23px 0
+  &:last-child
+    border: none
+
+.block_title
+  cursor: pointer
+  width: 100%
+  display: flex
+  align-items: flex-start
+  justify-content: space-between
+  font-size: 14.5px
+  font-weight: bold
+  color: #0a0a0a
+  .svg-icon
+    width: 17px
+    min-width: 17px
+    height: 11px
+    fill: $blue
+
+.in
+  .svg-icon
+    transform: rotate(180deg)
+
+.block_hover
+  margin: 23px 0 0
+  width: 100%
+  display: none
+  color: #515151
+  font-size: 14px
+
+//.reviews
+.reviews
+  padding: 120px 0
+  h2
+    text-align: center
+  .box-text
+    margin: 19px auto 46px
+    text-align: center
+    max-width: 705px
+    width: 100%
+    color: #515151
+  .btn
+    margin: 58px auto 0
+    box-shadow: none
+
+.reviews-box
+  border-radius: 20px
+  background-color: #f6fafc
+  width: 100%
+  max-width: 360px
+  margin: 0 auto
+  color: #515151
+  padding: 23px 38px 24px 22px
+  h3
+    font-weight: bold
+    color: #000
+    margin: 0 0 10px
+
+.reviews-box__head
+  width: 100%
+  display: flex
+  align-items: center
+  margin: 0 0 23px
+
+.reviews-box__photo
+  width: 61px
+  height: 61px
+  border-radius: 50%
+  display: flex
+  align-items: center
+  justify-content: center
+  overflow: hidden
+
+.reviews-box__head-wrap
+  padding: 0 0 0 15px
+  width: calc(100% - 61px)
+
+.list-rating
+  width: 100%
+  display: flex
+  align-items: center
+  li
+    width: 24px
+    height: 23px
+    margin: 0 9px 0 0
+    &:last-child
+      margin: 0
+    .svg-icon
+      fill: #febf01
+
+.slick-slide
+  outline: none
+
+.slick-arrow
+  z-index: 1
+  outline: none
+  opacity: 1
+  border-radius: 50%
+  width: 62px
+  height: 62px
+  box-shadow: 0 0 7.8px 0.2px rgba(77, 77, 77, 0.2)
+  background-color: #ffffff
+  display: flex
+  align-items: center
+  justify-content: center
+  padding: 20px
+  transition: .3s ease
+  svg
+    fill: #cfcfcf
+    width: 100%
+    height: 100%
+    transition: .3s ease
+  &:before
+    display: none
+  &:hover, &:focus
+    opacity: 1
+    svg
+      fill: $accent
+
+.slick-prev
+  left: -88px
+
+.slick-next
+  right: -88px
+
+.slick-dots
+  position: relative
+  bottom: 0
+  width: 100%
+  display: flex
+  align-items: center
+  justify-content: center
+  margin: 29px auto 0
+  li
+    width: 11px
+    height: 11px
+    border-radius: 50%
+    background: #cfcfcf
+    transition: .3s ease
+    margin: 0 19px 0 0
+    &:last-child
+      margin: 0
+    button
+      display: none
+  .slick-active
+    background: $accent
 
 //.partners
 .partners
@@ -691,11 +884,6 @@ main
   transform: translate(-50%, -50%)
   border-radius: 50%
 
-//.circle1
-//  width: 691px
-//  height: 691px
-//  border: solid 1px #a5bbe4
-
 .circle1
   border: solid 1px #a5bbe4
   width: 385px
@@ -718,6 +906,158 @@ main
   height: 181px
   font-size: 56px
   font-weight: 900
+
+
+//.sales
+.sales
+  padding: 186px 0 107px
+  background: url("../img/bg5.png") no-repeat center
+    size: cover
+  margin: 0 0 13px
+  .container
+    align-items: center
+
+
+.sales-img
+  max-width: 589px
+  width: 100%
+  display: flex
+  align-items: center
+  justify-content: center
+
+.sales-content
+  width: calc(100% - 589px)
+  padding: 0 70px 0 0
+
+//countdown
+.countdown
+  display: flex
+  align-items: flex-start
+  margin: 0 0 25px
+  
+.countdown-number
+  display: flex
+  flex-direction: column
+  align-items: center
+  text-align: center
+  color: #0a0a0a
+  font-size: 17px
+  position: relative
+
+.countdown-text
+  font-family: $font
+
+.countdown-time
+  font-weight: bold
+  font-size: 85px
+  letter-spacing: 6.38px
+  margin: 0 auto 10px
+  line-height: .9
+
+.countdown-dots
+  content: ':'
+  display: inline-block
+  font-weight: bold
+  font-size: 85px
+  margin: 0 5px
+  line-height: .8
+
+.timer-sales
+  display: flex
+  flex-direction: column
+  align-items: center
+  max-width: 488px
+  width: 100%
+  margin: 30px 0
+  border: 1px solid $blue
+    radius: 20px
+  p
+    position: relative
+    padding: 0 20px
+    text-align: center
+    margin: -10px auto 25px
+    background: #f6fafc
+    letter-spacing: 0.43px
+    color: $blue
+    
+//footer
+.callback-form
+  border-radius: 10px
+  background-color: #f6fafc
+  max-width: 360px
+  padding: 27px 25px 29px
+  width: 100%
+  h3
+    text-align: center
+    margin: 0 auto 22px
+    color: #0a0a0a
+    font-weight: bold
+  button
+    max-width: none
+    box-shadow: none
+
+.footer-box
+  h3
+    font-weight: bold
+    font-size: 18px
+
+footer
+  .container
+    align-items: flex-start
+    justify-content: space-between
+  .logo
+    width: 245px
+    max-width: none
+    img
+      width: 100%
+
+.list-social-footer
+  display: flex
+  align-items: center
+  margin: 35px 0
+  li
+    margin: 0 10px 0 0
+    &:last-child
+      margin: 0
+    a
+      width: 20px
+      height: 20px
+      .svg-icon
+        fill: #f6fafc
+
+.list-payment
+  display: flex
+  flex-direction: column
+  align-items: flex-start
+  margin: 0 0 40px
+  li
+    margin: 0 0 30px
+    &:last-child
+      margin: 0
+
+.footer-info
+  max-width: 380px
+  width: 100%
+  h3
+    margin: 0 0 22px
+  .box-text
+    font-size: 16px
+    line-height: normal
+
+.footer-menu
+  margin: 40px 0 140px
+  li
+    margin: 0 0 19px
+    &:last-child
+      margin: 0
+    a
+      color: #ffffff
+
+.contacts-item
+  margin: 35px 0 0
+  font-size: 14px
+  .mail, .phone
+    font-size: 18px
 
 @import "media"
 // Всегда в конце
