--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -1248,7 +1248,7 @@ footer
 .sidebar
   width: 292px
   color: #fff
-  padding: 10px 13px 40px 0
+  padding: 10px 13px 300px 0
 
 
 .time-box
@@ -1332,7 +1332,7 @@ footer
   width: 100%
   height: 100%
   position: relative
-  padding: 0 0 0 67px
+  padding: 0 0 107px 67px
 
 .cabinet-header
   width: 100%
@@ -1414,6 +1414,190 @@ footer
   label
     width: 30.5%
 
+.list-currency
+  width: 100%
+  display: flex
+  align-items: stretch
+  flex-wrap: wrap
+  margin: 20px 0 0
+  li
+    margin: 0 30px 19px 0
+    &:last-child
+      margin: 0 0 19px
+    a
+      width: 100px
+      height: 100px
+      display: flex
+      align-items: center
+      justify-content: center
+      color: #ffffff
+      font-weight: 800
+      letter-spacing: 0.16px
+      border-radius: 20px
+      background: $blue
+      box-shadow: 0 3px 0 0 #0f409c
+    .active
+      background: $accent
+      box-shadow: 0 3px 0 0 #de6e00
+
+.description-plane
+  font-size: 14px
+  color: #030303
+
+.box-analytics
+  margin: 60px 0 0
+  width: 100%
+  h3
+    font-size: 24px
+    font-weight: bold
+    color: #010101
+    margin: 0 0 15px
+    width: 100%
+  h4
+    margin: 20px 0 10px
+    width: 100%
+    font-size: 18px
+    font-weight: bold
+
+.table-wrapper
+  width: 100%
+  margin: 29px 0 0
+  //overflow-x: auto
+
+.table-scroll
+  width: 100%
+  overflow-y: auto
+  border-radius: 10px
+  box-shadow: 0 0 18.9px 2.1px rgba(184, 192, 196, 0.27)
+  background: #ffffff
+  padding: 0 27px 0 18px
+  max-height: 397px
+  &::-webkit-scrollbar-thumb
+    background: #d3dadd
+    border-radius: 5px
+  &::-webkit-scrollbar
+    width: 10px
+  &::-webkit-scrollbar-track
+    background: #fcfafa
+    border-radius: 5px
+
+
+tr
+  border-bottom: 1px solid #d3dadd
+
+td
+  padding: 12px 0
+  vertical-align: middle
+
+thead
+  font-weight: bold
+  letter-spacing: 0.21px
+  text-align: left
+
+tbody
+  tr
+    &:last-child
+      border: none
+
+th
+  vertical-align: middle
+  padding: 15px 0 11px
+
+.table
+  font-size: 14px
+  color: #010101
+  width: 100%
+
+.td-currency
+  text-transform: uppercase
+
+.table-daily
+  td, th
+    width: 14%
+    &:first-child
+      width: 17%
+    &:last-child
+      width: 50%
+    &:nth-child(2)
+      width: 21%
+
+.table-signal
+  td, th
+    width: 14%
+    &:nth-child(2)
+      width: 16%
+
+.table-text
+  margin: 31px 0 0
+  font-size: 14px
+  color: #727272
+  a
+    display: inline
+    text-decoration: underline
+
+//cabinet-video
+.cabinet-video
+  .description-plane
+    margin: 0 0 39px
+  h1
+    margin: 0 0 15px
+  .row
+    margin: 0 -15px
+
+
+
+.col-3
+  width: 33.3%
+  padding: 0 15px
+
+.video-box
+  margin: 0 0 35px
+  width: 100%
+  color: #515151
+  font-size: 14px
+  h3
+    color: #030303
+    font-size: 18px
+    font-weight: bold
+    margin: 0 0 11px
+  &__body
+    padding: 14px 0 0
+
+  &__preview
+    position: relative
+    width: 100%
+    height: 170px
+    border-radius: 10px
+    overflow: hidden
+    img
+      width: 100%
+      height: 100%
+      object-fit: cover
+  .btn-play
+    width: 28px
+    height: 31px
+
+.table-no-scroll
+  max-height: none
+
+.table-monitor
+  td, th
+    &:first-child
+      width: 30%
+
+.table-data
+  color: #515151
+  font-size: 14px
+
+.table-levels, .table-signal
+  td, th
+    &:first-child
+      width: 20%
+
+.links-icon
+  width: 19px
+  margin: 0 0 0 9px
+  display: inline
 
 @import "media"
 // Всегда в конце
