--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1512,9 +1512,9 @@ footer .logo {
     top: 50%;
     -webkit-transform: translate(-50%, -50%);
             transform: translate(-50%, -50%);
-    width: 100%;
-    height: 100%;
-    background: url("../img/tick.svg") no-repeat center;
+    width: 11px;
+    height: 8px;
+    background: url("../img/checkbox.svg") no-repeat center;
       background-size: cover;
     opacity: 0;
     -webkit-transition: .3s ease;
@@ -1939,6 +1939,73 @@ th {
   width: 19px;
   margin: 0 0 0 9px;
   display: inline; }
+
+.cabinet-row {
+  margin: 63px 0 0;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between; }
+
+.form-cabinet-edit {
+  max-width: 311px;
+  width: 100%; }
+  .form-cabinet-edit button {
+    max-width: none; }
+  .form-cabinet-edit h3 {
+    margin: 0 0 14px;
+    font-size: 18px;
+    font-weight: bold;
+    color: #010101; }
+  .form-cabinet-edit input {
+    height: 60px; }
+  .form-cabinet-edit label {
+    margin: 0 0 15px; }
+
+.label-date {
+  position: relative; }
+  .label-date .input-icon {
+    width: 20px;
+    height: 18px;
+    fill: #797979; }
+
+.label-file {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  border-radius: 8px;
+  border: solid 1px #ced6da;
+  height: 60px;
+  padding: 0 20px;
+  color: #ced6da;
+  font-size: 14px; }
+
+.btn-file {
+  color: #000000;
+  font-size: 12px;
+  background: #f4f1f1;
+  border-radius: 5px;
+  padding: 9px 14px;
+  cursor: pointer; }
+
+.input-file {
+  display: none; }
+
+.box-way {
+  margin: 63px 0 0; }
+  .box-way .checkbox {
+    margin: 0 0 20px;
+    font-weight: bold;
+    font-size: 14px;
+    color: #010101; }
 
 /*==========  Desktop First  ==========*/
 /* Large Devices, Wide Screens */
