--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -1216,9 +1216,9 @@ footer
     left: 50%
     top: 50%
     transform: translate(-50%,-50%)
-    width: 100%
-    height: 100%
-    background: url("../img/tick.svg") no-repeat center
+    width: 11px
+    height: 8px
+    background: url("../img/checkbox.svg") no-repeat center
       size: cover
     opacity: 0
     transition: .3s ease
@@ -1598,6 +1598,64 @@ th
   width: 19px
   margin: 0 0 0 9px
   display: inline
+
+.cabinet-row
+  margin: 63px 0 0
+  justify-content: space-between
+
+.form-cabinet-edit
+  max-width: 311px
+  width: 100%
+  button
+    max-width: none
+  h3
+    margin: 0 0 14px
+    font-size: 18px
+    font-weight: bold
+    color: #010101
+  input
+    height: 60px
+  label
+    margin: 0 0 15px
+
+.label-date
+  position: relative
+  .input-icon
+    width: 20px
+    height: 18px
+    fill: #797979
+
+.label-file
+  position: relative
+  display: flex
+  align-items: center
+  justify-content: space-between
+  flex-wrap: wrap
+  border-radius: 8px
+  border: solid 1px #ced6da
+  height: 60px
+  padding: 0 20px
+  color: #ced6da
+  font-size: 14px
+
+.btn-file
+  color: #000000
+  font-size: 12px
+  background: #f4f1f1
+  border-radius: 5px
+  padding: 9px 14px
+  cursor: pointer
+
+.input-file
+  display: none
+
+.box-way
+  margin: 63px 0 0
+  .checkbox
+    margin: 0 0 20px
+    font-weight: bold
+    font-size: 14px
+    color: #010101
 
 @import "media"
 // Всегда в конце
